# Kalki

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  LIVE_INTEGRATION_README.md  MEMORY_MODULE_README.md  MONITORING_OBSERVABILITY.md  PHASES_13_20_README.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS_SUMMARY.md  QUICKSTART.md  README.md  README_AGENTS.md  README_COMPLETE.md  SECURITY_POLICY.md  TESTING_STRATEGY.md  agent_integration.py  cli_ingest.py  consciousness_evolution_1761885853.json  demo.py  demo_agents.py  demo_consciousness_bootstrap.py  demo_live_consciousness.py  demo_memory.py  demo_metrics_phase20.py  demo_report.html  demo_report.json  demo_report.md  demo_workflow.py  docker-compose.yml  examples.py  implementation_summary.md  iron_man_design_report.json  kalki-v2.4 master plan.md  kalki.py  kalki_agent_integration.py  kalki_agents.py  kalki_cli.py  kalki_complete.py  kalki_orchestrator.py  (+27 more)
agents/: __init__.py  agent_manager.py  base_agent.py  cognitive.py  core.py  event_bus.py  multimodal.py  safety.py
data/: episodic.db  ethics_key  semantic.db  session.json
kalki-desktop/: package-lock.json  package.json  tailwind.config.js
kalki-desktop/src-tauri/: Cargo.toml  tauri.conf.json
kalki-desktop/src-tauri/src/: lib.rs  main.rs
memory/: episodic_index.json  semantic_index.json
modules/: __init__.py  auth.py  automation.py  boot.py  chunker.py  cli.py  config.py  consciousness_engine.py  doc_parser.py  eventbus.py  filehash.py  gui.py  ingest.py  keyring_helper.py  llm.py  logger.py  logging_config.py  meta_core.py  ocr.py  (+13 more)
(+165 files in other folders)
