[package]
name = "kalki-desktop"
version = "2.0.0"
description = "State-of-the-Art Desktop Interface for Kalki AI Framework"
authors = ["Kalki AI Team"]
edition = "2021"

[lib]
name = "kalki_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
regex = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
once_cell = "1.19"

